Resolves: tdf#119860 missing block of code to set text positioning

Change-Id: Ia57fc61147179a92569918417692e44e11ad6061
Reviewed-on: https://gerrit.libreoffice.org/60646
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>